# rust-wasm-ghpages-test

./: Cargo.toml  README.md  index-2a8e1ce5cc86b475.js  index-2a8e1ce5cc86b475_bg.wasm  index-6da7f8f9fc4d4f6e.js  index-6da7f8f9fc4d4f6e_bg.wasm  index.html
.github/workflows/: main.yml
src/: main.rs  producer.rs  subscriber.rs
