[package]
name = "ghpages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features=["wasmbind"] }
gloo-utils = "0.1"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
yew = "0.19.3"
yew-agent = "0.1.0"
